docs(20-docker-deployment): TR/EN lesson and exercises, PDFs
Closes #36

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>